# sst-gui

./: .mcp.json  AGENTS.md  FAILURES.md  PLAN.md  README.md  SAM2-batching.md  app.py  check.py  convert.py  gui.py  inference.py  justfile  lib.py  mask_browser.py  pyproject.toml  spec.json  upload.py  view.py
docs/002-mask-transform/: SPEC.md
docs/002_mask_transform/: SPEC.md
docs/004-mask-mode-consistency/: SPEC.md
docs/examples/: spec.json
tests/: test_mask_transform.py
web/: elm.json  index.html
web/elm-stuff/0.19.1/: Main.elmi  Main.elmo
web/src/: Main.elm  main.css
web/static/: main.js
