[project]
name = "sst-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.1.0",
    "duckdb>=1.3.2",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pydantic>=2.11.9",
    "streamlit>=1.49.1",
    "tomli-w>=1.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "tyro>=0.9.31",
]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

