[project]
name = "sst-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "datasets>=4.4.2",
    "duckdb>=1.3.2",
    "jaxtyping>=0.3.2",
    "litestar[standard]>=2.19.0",
    "marimo[mcp]>=0.19.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.11.9",
    "tomli-w>=1.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "tyro>=0.9.31",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

[tool.marimo.runtime]
watcher_on_save = "autorun"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
